--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
 version = 0.20-SNAPSHOT
 
 kotlin_version = 1.2.10
+kotlin_frontend_version = 0.0.23
 junit_version = 4.12
 atomicFU_version = 0.9.2
+html_version = 0.6.8
 lincheck_version=1.9
 dokka_version = 0.9.16-dev-mpp-hacks-1
 bintray_version = 1.7.3
